--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests/test.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +15,8 @@
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12"
+  },
+  "devDependencies": {
+    "mocha": "^9.0.3"
   }
 }
