--- a/package.json
+++ b/package.json
@@ -4,19 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon node app.js",
-    "test": "mocha tests/test.js"
+    "start": "nodemon node app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongodb": "^4.1.0",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12"
-  },
-  "devDependencies": {
-    "mocha": "^9.0.3"
   }
 }
